[gd_scene load_steps=6 format=3 uid="uid://dmwsmgfda34bv"]

[ext_resource type="Texture2D" uid="uid://b8s2b7hmjt44y" path="res://drop_items/assets/gold.png" id="1_86dwr"]
[ext_resource type="Script" path="res://ui/game_ui.gd" id="1_txfx0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o037f"]
bg_color = Color(0.258824, 0.258824, 0.258824, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_twdf6"]
bg_color = Color(0.839216, 0.270588, 0.25098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4h4wc"]
bg_color = Color(0.807843, 0.709804, 0.129412, 1)

[node name="game_ui" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_txfx0")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 5.0
offset_top = 17.0
offset_right = 472.0
offset_bottom = 159.0
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="hp_value" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/hp_value"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/hp_value/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "HP: "
horizontal_alignment = 2

[node name="hp_value_bar" type="ProgressBar" parent="MarginContainer/VBoxContainer/hp_value/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_o037f")
theme_override_styles/fill = SubResource("StyleBoxFlat_twdf6")
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/hp_value/HBoxContainer/hp_value_bar"]
layout_mode = 0
offset_right = 342.0
offset_bottom = 49.0
theme_override_font_sizes/font_size = 25
text = "80 / 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/hp_value/HBoxContainer/hp_value_bar"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0588235, 0.0588235, 0.0588235, 1)

[node name="exp_value" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/exp_value"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/exp_value/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "EXP: "
horizontal_alignment = 2

[node name="exp_value_bar" type="ProgressBar" parent="MarginContainer/VBoxContainer/exp_value/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_o037f")
theme_override_styles/fill = SubResource("StyleBoxFlat_4h4wc")
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/exp_value/HBoxContainer/exp_value_bar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -24.5
offset_right = -6.0
offset_bottom = 24.5
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = " Lv.30"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/exp_value/HBoxContainer/exp_value_bar"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0588235, 0.0588235, 0.0588235, 1)

[node name="gold" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 114.0
offset_top = 175.0
offset_right = 154.0
offset_bottom = 217.0
theme_override_font_sizes/font_size = 30
text = "50"
metadata/_edit_group_ = true

[node name="Control" type="Control" parent="gold"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_right = -40.0
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="gold/Control"]
scale = Vector2(3.25, 3.25)
texture = ExtResource("1_86dwr")

[node name="count_down" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = -20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="now_round" type="Label" parent="count_down"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_top = 3.0
offset_right = 60.0
offset_bottom = 58.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "第1波"
horizontal_alignment = 1

[node name="time_show" type="Label" parent="count_down"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -23.0
offset_top = 57.0
offset_right = 23.0
offset_bottom = 112.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "30"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="count_down"]

[connection signal="timeout" from="count_down/Timer" to="." method="_on_timer_timeout"]
